Adding categoris and relationships, not implemented in UI

--- a/views/home.jade
+++ b/views/home.jade
@@ -21,9 +21,9 @@ block content
           .panel-body
             h3 Keywords
             table#keyword
-              th
-                tr Keyword
-                tr Relevance
+              tr
+                th Keyword
+                th Relevance
               for keyword in keywords
                 tr
                   td #{keyword.text}
