--- a/views/account/signup.jade
+++ b/views/account/signup.jade
@@ -28,6 +28,8 @@ block content
           span or
 
         .btn-toolbar.text-center
+          a.btn.btn-facebook(href='/auth/facebook') Sign in with Facebook
+          a.btn.btn-twitter(href='/auth/twitter') Sign in with Twitter
 
     p.text-center Already have an account?&nbsp;
       a(href='/login')
