--- a/views/account/login.jade
+++ b/views/account/login.jade
@@ -26,6 +26,8 @@ block content
           span or
 
         .btn-toolbar.text-center
+          a.btn.btn-facebook(href='/auth/facebook') Sign in with Facebook
+          a.btn.btn-twitter(href='/auth/twitter') Sign in with Twitter
 
     p.text-center Don't have an account?&nbsp;
       a(href='/signup')
